--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #cda45e;
+  color: #ef5241;
   text-decoration: none;
 }
 
 a:hover {
-  color: #d9ba85;
+  color: #ef5241;
   text-decoration: none;
 }
 
@@ -48,8 +48,8 @@ h1, h2, h3, h4, h5, h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #1a1814;
-  border-top-color: #cda45e;
-  border-bottom-color: #cda45e;
+  border-top-color: #ef5241;
+  border-bottom-color: #ef5241;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -89,17 +89,17 @@ h1, h2, h3, h4, h5, h6 {
   height: 44px;
   border-radius: 50px;
   transition: all 0.4s;
-  border: 2px solid #cda45e;
+  border: 2px solid #ef5241;
 }
 
 .back-to-top i {
   font-size: 28px;
-  color: #cda45e;
+  color: #ef5241;
   line-height: 0;
 }
 
 .back-to-top:hover {
-  background: #cda45e;
+  background: #ef5241;
   color: #1a1814;
 }
 
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #topbar .contact-info i {
   font-style: normal;
-  color: #d9ba85;
+  color: #ef5241;
 }
 
 #topbar .contact-info i span {
@@ -151,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
   list-style: none;
   padding: 0;
   margin: 0;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 #topbar .languages ul a {
@@ -211,7 +211,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .book-a-table-btn {
   margin: 0 0 0 15px;
-  border: 2px solid #cda45e;
+  border: 2px solid #ef5241;
   color: #fff;
   border-radius: 50px;
   padding: 8px 25px;
@@ -223,7 +223,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .book-a-table-btn:hover {
-  background: #cda45e;
+  background: #ef5241;
   color: #fff;
 }
 
@@ -274,7 +274,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover, .navbar .active, .navbar li:hover > a {
-  color: #d9ba85;
+  color: #ef5241;
 }
 
 .navbar .dropdown ul {
@@ -307,7 +307,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .navbar .dropdown:hover > ul {
@@ -398,7 +398,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .navbar-mobile .getstarted {
@@ -430,7 +430,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -479,7 +479,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 span {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 #hero h2 {
@@ -503,11 +503,11 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
   line-height: 1;
   color: white;
-  border: 2px solid #cda45e;
+  border: 2px solid #ef5241;
 }
 
 #hero .btn-menu:hover, #hero .btn-book:hover {
-  background: #cda45e;
+  background: #ef5241;
   color: #fff;
 }
 
@@ -518,7 +518,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#cda45e 50%, rgba(205, 164, 94, 0.4) 52%);
+  background: radial-gradient(#ef5241 50%, rgba(205, 164, 94, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -564,7 +564,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .play-btn:hover::after {
-  border-left: 15px solid #cda45e;
+  border-left: 15px solid #ef5241;
   transform: scale(20);
 }
 
@@ -696,7 +696,7 @@ section {
   font-size: 36px;
   font-weight: 700;
   font-family: "Playfair Display", serif;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 /*--------------------------------------------------------------
@@ -790,8 +790,8 @@ section {
   height: 60px;
   z-index: 1;
   content: '';
-  border-left: 5px solid #cda45e;
-  border-top: 5px solid #cda45e;
+  border-left: 5px solid #ef5241;
+  border-top: 5px solid #ef5241;
   transition: .5s;
 }
 
@@ -803,8 +803,8 @@ section {
   height: 60px;
   z-index: 2;
   content: '';
-  border-right: 5px solid #cda45e;
-  border-bottom: 5px solid #cda45e;
+  border-right: 5px solid #ef5241;
+  border-bottom: 5px solid #ef5241;
   transition: .5s;
 }
 
@@ -839,7 +839,7 @@ section {
 .about .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .about .content p:last-child {
@@ -866,7 +866,7 @@ section {
   display: block;
   font-size: 28px;
   font-weight: 700;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .why-us .box h4 {
@@ -885,7 +885,7 @@ section {
 }
 
 .why-us .box:hover {
-  background: #cda45e;
+  background: #ef5241;
   padding: 30px 30px 70px 30px;
   box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
 }
@@ -920,7 +920,7 @@ section {
 }
 
 .menu #menu-flters li:hover, .menu #menu-flters li.filter-active {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .menu #menu-flters li:last-child {
@@ -947,7 +947,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -968,7 +970,7 @@ section {
 }
 
 .menu .menu-content a:hover {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .menu .menu-content span {
@@ -977,7 +979,7 @@ section {
   z-index: 3;
   padding: 0 10px;
   font-weight: 600;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .menu .menu-ingredients {
@@ -1005,23 +1007,23 @@ section {
   transition: 0.3s;
   color: #fff;
   border-radius: 0;
-  border-right: 2px solid #cda45e;
+  border-right: 2px solid #ef5241;
   font-weight: 600;
   font-size: 15px;
 }
 
 .specials .nav-link:hover {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .specials .nav-link.active {
   color: #1a1814;
-  background: #cda45e;
-  border-color: #cda45e;
+  background: #ef5241;
+  border-color: #ef5241;
 }
 
 .specials .nav-link:hover {
-  border-color: #cda45e;
+  border-color: #ef5241;
 }
 
 .specials .tab-pane.active {
@@ -1096,7 +1098,7 @@ section {
 .events .event-item h3 {
   font-weight: 600;
   font-size: 26px;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .events .event-item .price {
@@ -1107,7 +1109,7 @@ section {
 }
 
 .events .event-item .price span {
-  border-bottom: 2px solid #cda45e;
+  border-bottom: 2px solid #ef5241;
 }
 
 .events .event-item ul {
@@ -1122,7 +1124,7 @@ section {
 .events .event-item ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .events .event-item p:last-child {
@@ -1142,7 +1144,7 @@ section {
 }
 
 .events .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #cda45e;
+  background-color: #ef5241;
 }
 
 /*--------------------------------------------------------------
@@ -1199,7 +1201,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #cda45e;
+  border: 3px solid #ef5241;
   border-top-color: #1a1814;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1227,7 +1229,7 @@ section {
 }
 
 .book-a-table .php-email-form input:focus, .book-a-table .php-email-form textarea:focus {
-  border-color: #cda45e;
+  border-color: #ef5241;
 }
 
 .book-a-table .php-email-form input {
@@ -1239,7 +1241,7 @@ section {
 }
 
 .book-a-table .php-email-form button[type="submit"] {
-  background: #cda45e;
+  background: #ef5241;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1248,7 +1250,7 @@ section {
 }
 
 .book-a-table .php-email-form button[type="submit"]:hover {
-  background: #d3af71;
+  background: #ef5241;
 }
 
 /*--------------------------------------------------------------
@@ -1282,7 +1284,7 @@ section {
 }
 
 .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-  color: #d3af71;
+  color: #ef5241;
   font-size: 26px;
 }
 
@@ -1323,7 +1325,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #cda45e;
+  background-color: #ef5241;
 }
 
 /*--------------------------------------------------------------
@@ -1404,7 +1406,7 @@ section {
 }
 
 .chefs .member .social a:hover {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 .chefs .member .social i {
@@ -1440,7 +1442,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
-  background: #cda45e;
+  background: #ef5241;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1514,7 +1516,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #cda45e;
+  border: 3px solid #ef5241;
   border-top-color: #1a1814;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1542,7 +1544,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #cda45e;
+  border-color: #ef5241;
 }
 
 .contact .php-email-form input {
@@ -1554,7 +1556,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #cda45e;
+  background: #ef5241;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1563,7 +1565,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #d3af71;
+  background: #ef5241;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1639,7 +1641,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #cda45e;
+  background: #ef5241;
   color: #fff;
   text-decoration: none;
 }
@@ -1664,7 +1666,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #cda45e;
+  color: #ef5241;
   font-size: 18px;
   line-height: 1;
 }
@@ -1687,7 +1689,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #cda45e;
+  color: #ef5241;
 }
 
 #footer .footer-top .footer-newsletter form {
@@ -1716,14 +1718,14 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px 2px 20px;
-  background: #cda45e;
+  background: #ef5241;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #d3af71;
+  background: #ef5241;
 }
 
 #footer .copyright {
@@ -1737,3 +1739,4 @@ section {
   font-size: 13px;
   color: #fff;
 }
+
